modules/ecs/security.tf
resource "aws_security_group" "ecs_tasks" {
  name        = "ecs-tasks-sg"
  description = "allow inbound access from the ALB only"
  vpc_id      = var.vpc_id

  ingress {
    protocol  = "tcp"
    from_port = var.container_port
    to_port   = var.container_port
    cidr_blocks = ["0.0.0.0/0"]
    security_groups = [aws_security_group.loadbalancer.id]
  }
}

resource "aws_security_group" "loadbalancer" {
  name        = "${var.ecs_service_name}-lb-sg"
  description = "Control access to the ALB"
  vpc_id      = var.vpc_id

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
